--- a/app/scss/base/_typography.scss
+++ b/app/scss/base/_typography.scss
@@ -145,4 +145,21 @@ small {
   &--discount {
     text-decoration: line-through;
   }
+
+  &--strikethrough {
+    position: relative;
+    overflow: visible;
+
+    &::before {
+      content: "";
+      position: absolute;
+      left: 5px;
+      top: -2px;
+      z-index: 999;
+      width: 100%;
+      height: 25px;
+      background-repeat: no-repeat;
+      background-image: url("../../../images/illustrations/strikethrough.svg");
+    }
+  }
 }
