changed bear market promo styling to red

--- a/app/scss/base/_typography.scss
+++ b/app/scss/base/_typography.scss
@@ -138,6 +138,10 @@ small {
     color: white;
   }
 
+  &--larger {
+    transform: scale(1.2);
+  }
+
   &--center {
     text-align: center;
   }
