--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -75,12 +75,12 @@
     }
 
     &--deal {
-      border: 1px solid var(--yellow-400);
-      background-color: var(--yellow-50);
+      border: 1px solid var(--red-200);
+      background-color: var(--red-50);
       box-shadow: 0 2px 12px 0 hsla(44, 78%, 16%, .09);
 
       &:hover {
-        border: 1px solid var(--yellow-500);
+        border: 1px solid var(--red-400);
         box-shadow: 0 12px 32px 0 hsla(44, 78%, 16%, .13);
       }
     }
