--- a/app/scss/components/_subnav.scss
+++ b/app/scss/components/_subnav.scss
@@ -6,7 +6,7 @@
   top: 72px;
   max-width: 100%;
   padding: 0.75rem 2rem;
-  background: var(--blue-gray-50);
+  background: hsl(210, 36%, 96%, 0.85);
   backdrop-filter: blur(5px);
 
   &__container {
