--- a/app/scss/components/_subnav.scss
+++ b/app/scss/components/_subnav.scss
@@ -8,6 +8,7 @@
   padding: 0.75rem 2rem;
   background: hsl(210, 36%, 96%, 0.85);
   backdrop-filter: blur(5px);
+  box-shadow: 0 12px 24px hsl(216deg 100% 5% / 10%);
 
   &__container {
     display: flex;
