--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -63,6 +63,10 @@
     &:hover {
       border: 1px solid var(--blue-500);
       box-shadow: 0 12px 32px 0 hsla(213, 78%, 16%, .13);
+
+      .card-9--popup {
+        transform: translateY(4.5rem);
+      }
     }
 
     img {
@@ -75,6 +79,7 @@
     }
 
     &--deal {
+      position: relative;
       color: var(--blue-gray-900);
       border: 1px solid var(--red-200);
       background-color: var(--red-50);
@@ -82,8 +87,22 @@
 
       &:hover {
         border: 1px solid var(--red-400);
-        box-shadow: 0 12px 32px 0 hsla(44, 78%, 16%, .13);
+        box-shadow: 0 2px 6px 0 hsla(44, 78%, 16%, .23);
       }
+    }
+
+    &--popup {
+      position: absolute;
+      z-index: -1;
+      top: 0;
+      left: -1px;
+      background-color: var(--yellow-50);
+      border: 1px solid var(--yellow-400);
+      margin-top: -1rem;
+      padding: 0.5rem 1rem;
+      border-radius: 5px;
+      transition: transform 150ms ease-in;
+      transform: translateY(1rem);
     }
 
     &--disabled {
