--- a/app/scss/sections/_turnkey.scss
+++ b/app/scss/sections/_turnkey.scss
@@ -248,15 +248,31 @@
 
   &__grid {
     display: grid;
-    padding-top: 3rem;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(6, 1fr);
     grid-gap: 1rem;
+    padding-top: 3rem;
 
-    @include breakpoint(lg-tablet) {
-      grid-template-columns: repeat(2, 1fr);
+    &-item-1 {
+      grid-area: 1 / 1 / 2 / 3;
     }
 
-    @include breakpoint(sm-tablet) {
+    &-item-2 {
+      grid-area: 1 / 3 / 2 / 5;
+    }
+
+    &-item-3 {
+      grid-area: 1 / 5 / 2 / 7;
+    }
+
+    &-item-4 {
+      grid-area: 2 / 1 / 3 / 4;
+    }
+
+    &-item-5 {
+      grid-area: 2 / 4 / 3 / 7;
+    }
+
+    @include breakpoint(md-tablet) {
       grid-template-columns: repeat(1, 1fr);
     }
 
@@ -275,6 +291,10 @@
         transform: translateY(-5px);
         border: 1px solid var(--blue-500);
         box-shadow: var(--shadow-elevation-high);
+      }
+
+      @include breakpoint(md-tablet) {
+        grid-area: auto;
       }
     }
 
