--- a/app/scss/components/_nav.scss
+++ b/app/scss/components/_nav.scss
@@ -3,9 +3,9 @@
 .navbar {
   position: sticky;
   top: 0;
-  z-index: 99999;
+  z-index: 999;
   background: hsl(0deg 0% 100% / 85%);
-  box-shadow: inset 0 -1px 0 0 hsla(0, 0%, 0%, 0.05);
+  border-bottom: 1px solid var(--blue-gray-50);
   backdrop-filter: saturate(180%) blur(5px);
   backface-visibility: hidden;
 
@@ -139,6 +139,10 @@
         transform: rotate(-45deg) translate(-3px, 6px);
       }
     }
+  }
+
+  &--borderless {
+    border: none;
   }
 
   .dropdown {
