--- a/app/scss/components/_subnav.scss
+++ b/app/scss/components/_subnav.scss
@@ -8,7 +8,8 @@
   padding: 0.75rem 2rem;
   background: hsl(210, 36%, 96%, 0.85);
   backdrop-filter: blur(5px);
-  box-shadow: 0 2px 4px hsl(217deg 100% 5% / 10%);
+  border-top: 1px solid var(--blue-gray-100);
+  border-bottom: 1px solid var(--blue-gray-100);
 
   &__container {
     display: flex;
@@ -28,7 +29,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    gap: 0.75rem;
+    gap: 2rem;
     padding: 0.25rem 0.5rem;
 
     @include breakpoint(sm-tablet) {
