--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -26,6 +26,15 @@
     margin: 0 auto 0;
     grid-template-columns: repeat(1, 1fr);
   }
+
+  &--i300 {
+    margin: 3rem auto 0;
+
+    @include breakpoint(lg-tablet) {
+      margin: 3rem auto 0;
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
 }
 
 
@@ -202,6 +211,14 @@
 
     @include breakpoint(md-tablet) {
       grid-column: 1/2;
+    }
+
+    &--i300 {
+      @include breakpoint(lg-tablet) {
+        order: 9;
+        padding: 1rem 0;
+        grid-column: auto;
+      }
     }
   }
 
