--- a/app/scss/sections/_hero.scss
+++ b/app/scss/sections/_hero.scss
@@ -84,6 +84,10 @@
     flex-direction: column;
     justify-content: center;
     height: 300px;
+
+    &--i300 {
+      height: 400px;
+    }
   }
 
   &__minipod {
