--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -34,6 +34,10 @@
       margin: 3rem auto 0;
       grid-template-columns: repeat(1, 1fr);
     }
+
+    @include breakpoint(sm-tablet) {
+      margin: 0 auto 0;
+    }
   }
 }
 
