--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -13,6 +13,7 @@
 @use "components/footer";
 @use "components/cards";
 @use "components/tables";
+@use "components/scroll";
 @use "components/form";
 @use "sections/hero";
 @use "sections/home";
