--- a/app/scss/components/_buttons.scss
+++ b/app/scss/components/_buttons.scss
@@ -126,6 +126,32 @@
     }
   }
 
+  &--switch {
+    position: relative;
+    background-color: white;
+    border: 1px solid var(--blue-200);
+    padding: 0.3rem;
+    font-size: 0.7rem;
+    padding-left: 0.5rem;
+    padding-right: 2rem;
+
+    &::after {
+      content: "";
+      background-image: url("../../../images/icons/icon_switch.svg");
+      background-position: center center;
+      position: absolute;
+      top: 50%;
+      right: 8px;
+      transform: translateY(-50%);
+      width: 22px;
+      height: 22px;
+    }
+
+    &:hover {
+      border: 1px solid var(--blue-500);
+    }
+  }
+
   &--form {
     grid-column: span 6;
     font-size: 1rem;
