--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -15,6 +15,7 @@
 @use "components/tables";
 @use "components/scroll";
 @use "components/form";
+@use "components/gallery";
 @use "sections/hero";
 @use "sections/home";
 @use "sections/competitors";
