--- a/app/scss/sections/_team.scss
+++ b/app/scss/sections/_team.scss
@@ -62,6 +62,7 @@
 
   &__list-member,
   &__list-member--open-position {
+
     // small dot next to each team member
     &::before {
       content: "";
@@ -201,31 +202,33 @@
   }
 }
 
-.gallery {
-  &__grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, auto);
-    gap: 1rem;
+// disabled the gallery for now
 
-    @include breakpoint(lg-tablet) {
-      grid-template-columns: repeat(2, 1fr);
-    }
+// .gallery {
+//   &__grid {
+//     display: grid;
+//     grid-template-columns: repeat(3, 1fr);
+//     grid-template-rows: repeat(2, auto);
+//     gap: 1rem;
 
-    @include breakpoint(sm-tablet) {
-      grid-template-columns: repeat(1, 1fr);
-    }
-  }
+//     @include breakpoint(lg-tablet) {
+//       grid-template-columns: repeat(2, 1fr);
+//     }
 
-  &__cta {
-    line-height: 1.2;
-    text-align: center;
-  }
+//     @include breakpoint(sm-tablet) {
+//       grid-template-columns: repeat(1, 1fr);
+//     }
+//   }
 
-  img {
-    max-width: 100%;
-    max-height: 100%;
-    border-radius: 10px;
-    box-shadow: 0px 8px 18px -6px hsla(213, 78%, 16%, 0.35);
-  }
-}
+//   &__cta {
+//     line-height: 1.2;
+//     text-align: center;
+//   }
+
+//   img {
+//     max-width: 100%;
+//     max-height: 100%;
+//     border-radius: 10px;
+//     box-shadow: 0px 8px 18px -6px hsla(213, 78%, 16%, 0.35);
+//   }
+// }
