--- a/app/scss/components/_scroll.scss
+++ b/app/scss/components/_scroll.scss
@@ -4,7 +4,6 @@
   font-size: .8rem;
   position: relative;
   z-index: 9;
-  // top: var(--scroll-position);
   left: 50%;
   display: flex;
   align-items: center;
@@ -15,7 +14,9 @@
   transform: translateX(-50%);
   color: var(--blue-gray-500);
 
-  --scroll-position: 600px;
+  @include breakpoint(sm-tablet) {
+    transform: translate(-50%, 40px);
+  }
 
   &__mouse {
     position: relative;
