--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -14,11 +14,11 @@
   padding: 1rem 2rem 7rem;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: auto;
-  grid-column-gap: 30px;
-  grid-row-gap: 30px;
+  gap: 2rem;
 
   @include breakpoint(lg-tablet) {
     margin: 3rem auto 0;
+    gap: 1rem;
     grid-template-columns: repeat(2, 1fr);
   }
 
@@ -42,12 +42,7 @@
 
 .card {
 
-  &-1,
-  &-2,
-  &-3,
-  &-4,
-  &-5,
-  &-6 {
+  &__list {
     padding: 20px;
     transition: all 100ms ease-in;
     border: 1px solid var(--blue-200);
@@ -59,15 +54,46 @@
       border: 1px solid var(--blue-500);
       box-shadow: 0 12px 32px 0 hsla(213, 78%, 16%, .13);
     }
+
+    &-item {
+      font-size: .8rem;
+      position: relative;
+      padding-left: 2.5rem;
+      letter-spacing: -.1px;
+      color: var(--blue-gray-600);
+    }
+
+    &-item::before {
+      position: absolute;
+      bottom: 50%;
+      left: 0;
+      width: 32px;
+      height: 32px;
+      content: "";
+      transform: translateY(50%);
+      background-image: url(../../../images/icons/icon_checkmark-small.svg);
+    }
+
+    &-item--new::before {
+      position: absolute;
+      bottom: 50%;
+      left: 0;
+      width: 32px;
+      height: 32px;
+      content: "";
+      transform: translateY(50%);
+      background-image: url(../../../images/icons/icon_new.svg);
+      background-repeat: no-repeat;
+      background-position: center center;
+    }
   }
 
-  &-7,
-  &-9 {
+  &__data {
     position: relative;
     padding: 10px 20px;
     transition: all 100ms ease-in;
-    border: 1px solid var(--blue-200);
     border-radius: 7px;
+    border: 1px solid var(--blue-200);
     background-color: var(--blue-gray-50);
     box-shadow: 0 2px 12px 0 hsla(213, 78%, 16%, .09);
 
@@ -134,134 +160,6 @@
         color: var(--warm-gray-300);
       }
     }
-  }
-}
-
-
-.sparkle-container {
-  position: absolute;
-  left: 0;
-  width: 100%;
-  height: 100%;
-
-  pointer-events: none;
-  border-radius: 5px;
-  background: hsl(0deg 0% 0% / 0%);
-}
-
-.sparkle {
-  position: absolute;
-  transform: scale(0);
-
-  &-1 {
-    left: -9px;
-  }
-
-  &-2 {
-    right: -9px;
-  }
-
-  &-3 {
-    bottom: 0;
-    left: -9px;
-  }
-
-  &-4 {
-    right: -9px;
-    bottom: 0;
-  }
-}
-
-.card {
-  &-1 {
-    order: 1;
-  }
-
-  &-2 {
-    order: 2;
-  }
-
-  &-3 {
-    order: 3;
-  }
-
-  &-4 {
-    order: 4;
-  }
-
-  &-5 {
-    order: 5;
-  }
-
-  &-6 {
-    order: 6;
-  }
-
-  &-7 {
-    order: 7;
-  }
-
-  &-8 {
-    font-size: 1.3rem;
-    order: 8;
-
-    @include breakpoint(lg-tablet) {
-      order: 9;
-      padding: 1rem 0;
-      grid-column: 1/3;
-    }
-
-    @include breakpoint(md-tablet) {
-      grid-column: 1/2;
-    }
-
-    &--i300 {
-      @include breakpoint(lg-tablet) {
-        order: 9;
-        padding: 1rem 0;
-        grid-column: auto;
-      }
-    }
-  }
-
-  &-9 {
-    order: 9;
-
-    @include breakpoint(lg-tablet) {
-      order: 8;
-    }
-  }
-
-  &__list-item {
-    font-size: .8rem;
-    position: relative;
-    padding-left: 2.5rem;
-    letter-spacing: -.1px;
-    color: var(--blue-gray-600);
-  }
-
-  &__list-item::before {
-    position: absolute;
-    bottom: 50%;
-    left: 0;
-    width: 32px;
-    height: 32px;
-    content: "";
-    transform: translateY(50%);
-    background-image: url(../../../images/icons/icon_checkmark-small.svg);
-  }
-
-  &__list-item--new::before {
-    position: absolute;
-    bottom: 50%;
-    left: 0;
-    width: 32px;
-    height: 32px;
-    content: "";
-    transform: translateY(50%);
-    background-image: url(../../../images/icons/icon_new.svg);
-    background-repeat: no-repeat;
-    background-position: center center;
   }
 
   &__youtube {
@@ -345,5 +243,99 @@
       width: 131px;
       min-width: 131px;
     }
+  }
+
+  &-1 {
+    order: 1;
+  }
+
+  &-2 {
+    order: 2;
+  }
+
+  &-3 {
+    order: 3;
+  }
+
+  &-4 {
+    order: 4;
+  }
+
+  &-5 {
+    order: 5;
+  }
+
+  &-6 {
+    order: 6;
+  }
+
+  &-7 {
+    order: 7;
+  }
+
+  &-8 {
+    font-size: 1.3rem;
+    order: 8;
+
+    @include breakpoint(lg-tablet) {
+      order: 9;
+      padding: 1rem 0;
+      grid-column: 1/3;
+    }
+
+    @include breakpoint(md-tablet) {
+      grid-column: 1/2;
+    }
+
+    &--i300 {
+      @include breakpoint(lg-tablet) {
+        order: 9;
+        padding: 1rem 0;
+        grid-column: auto;
+      }
+    }
+  }
+
+  &-9 {
+    order: 9;
+
+    @include breakpoint(lg-tablet) {
+      order: 8;
+    }
+  }
+}
+
+
+.sparkle-container {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  pointer-events: none;
+  border-radius: 5px;
+  background: hsl(0deg 0% 0% / 0%);
+}
+
+.sparkle {
+  position: absolute;
+  transform: scale(0);
+
+  &-1 {
+    left: -9px;
+  }
+
+  &-2 {
+    right: -9px;
+  }
+
+  &-3 {
+    bottom: 0;
+    left: -9px;
+  }
+
+  &-4 {
+    right: -9px;
+    bottom: 0;
   }
 }
