--- a/app/scss/components/_minipod.scss
+++ b/app/scss/components/_minipod.scss
@@ -1,5 +1,7 @@
 @use "../base/breakpoints" as *;
 
+// the code below is responsible for the pseudo 3D minipod component seen on the home page and M300 product page
+
 .minipod {
   &__heading {
     font-size: 2.441rem;
@@ -10,128 +12,6 @@
   &__body {
     max-width: 45ch;
     color: var(--blue-gray-600);
-  }
-
-  &__illustrations {
-    display: flex;
-    position: relative;
-    margin-top: 4rem;
-
-    @include breakpoint(lg-tablet) {
-      flex-direction: column;
-    }
-
-    @include breakpoint(sm-tablet) {
-      flex-direction: column;
-    }
-
-    img {
-      object-fit: contain;
-    }
-
-    &--i300 {
-      @include breakpoint(sm-desktop) {
-        flex-direction: column;
-      }
-    }
-
-    &--shadow {
-      position: absolute;
-      left: 50%;
-      top: 20%;
-      transform: translateX(-50%);
-      background-color: var(--blue-50);
-      width: 200px;
-      height: 100px;
-      border-radius: 100vh;
-      filter: blur(80px);
-      z-index: -1;
-
-      @include breakpoint(sm-tablet) {
-        width: 300px;
-        height: 600px;
-      }
-    }
-  }
-
-  &__set {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-
-    @include breakpoint(lg-tablet) {
-      grid-template-columns: 1fr;
-      gap: 0;
-
-      &:first-child .minipod__set-img {
-        margin-top: 0;
-      }
-    }
-
-    &-img {
-      justify-self: flex-end;
-      align-self: end;
-      width: auto;
-      height: auto;
-
-      @include breakpoint(lg-tablet) {
-        margin-top: 4rem;
-        margin-bottom: -1rem;
-        justify-self: center;
-        width: 100%;
-      }
-    }
-
-    &-text {
-      pointer-events: all;
-    }
-
-    &-3 {
-      margin-top: 4rem;
-    }
-
-    &-4 {
-      margin-top: 4rem;
-    }
-
-    &-6 {
-      margin-top: 4rem;
-    }
-
-    &-8 {
-      margin-top: 0rem;
-      pointer-events: none;
-
-      @include breakpoint(lg-tablet) {
-        margin-top: 0;
-      }
-    }
-
-    &-10 {
-      margin-top: -4rem;
-      pointer-events: none;
-
-      @include breakpoint(lg-tablet) {
-        margin-top: 0;
-      }
-
-      .minipod__set-img {
-        transform: scaleX(-1);
-        width: 120%;
-
-        @include breakpoint(lg-tablet) {
-          width: 100%;
-        }
-      }
-    }
-
-    &-detail {
-      width: 330px;
-    }
-  }
-
-  &__set-heading {
-    min-width: 90px;
-    color: var(--blue-gray-900);
   }
 }
 
@@ -179,7 +59,7 @@
   }
 }
 
-/* Enables the buttons to add a rotation */
+// Enables the buttons to add a rotation
 
 .camera-rotate {
   transform-origin: left;
