--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -23,6 +23,8 @@
 @use "sections/merch";
 @use "sections/faq";
 @use "sections/promotion";
+@use "sections/pricing";
+@use "sections/bundle";
 @use "sections/turnkey";
 @use "sections/voskcoin";
 @use "utils/flex";
